fix(april-fool-2026): disable transitions for init to avoid css flickering

--- a/packages/april-fool-2026/src/style.scss
+++ b/packages/april-fool-2026/src/style.scss
@@ -100,6 +100,10 @@
     transform: translateY(100%);
     pointer-events: none;
   }
+
+  &.ipe-cli-no-transition {
+    transition: none !important;
+  }
 }
 
 .ipe-cli-topbar {
